--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,3 +1,9 @@
+
+@import '@angular/material';
+@import '@angular/material/prebuilt-themes/indigo-pink.css';
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap');
+
+
 .form-field {
     width: 100%;
   }
@@ -85,7 +91,7 @@
       padding: 10px 15px;
       font-size: 13px;
       border-radius: 8px;
-      width: 100%;
+      width: 47%;
       outline: none;
   }
   
@@ -118,7 +124,9 @@
     width: 50%;
   }
   .but{
-      left: -39%;
+      position: absolute;
+      left: 7.6%;
+      top: 100%;
   }
   .Sign-In.active .sign-up{
       transform: translateX(100%);
@@ -164,8 +172,9 @@
       top: 30%;
       left: 50%;
       width: 30%;
-      height: 61.75%;
+      height: 54%;
       overflow: hidden;
+      flex-direction: column;
       transition: all 0.6s ease-in-out;
       border-radius: 150px 0 0 100px;
       z-index: 1000;
