--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,27 +1,36 @@
+<app-navbar></app-navbar>
 <div class="parent">
-    <mat-form-field class="Sign-In" title="Sign In">
-        <mat-form-field class="form-field">
-          <mat-label>Email</mat-label>
-          <input type="email" matInput formControlName="email" placeholder="email">
-        </mat-form-field>
-        <mat-form-field class="form-field ">
-          <mat-label>Password</mat-label>
-          <input type="password" matInput formControlName="password" required placeholder="Password">
-        </mat-form-field>
-    
-        <button class="but">Sign In</button>
-    </mat-form-field>
-    </div>
+  <mat-form-field class="Sign-In" title="Sign In">
+    <h1>SIGN IN</h1>
+    <form [formGroup]="form" class="form" >
+      <mat-form-field class="form-field">
+        <mat-label>Email</mat-label>
+        <input type="email" matInput formControlName="email" placeholder="email">
+   
+      </mat-form-field>
+      <mat-form-field class="form-field ">
+        <mat-label>Password</mat-label>
+        <input type="password" matInput formControlName="password" required placeholder="Password">
+       
+      </mat-form-field>
+  
+      <button class="but" mat-raised-button color="accent" [disabled]="form.invalid">Sign In</button>
+    </form>
+  </mat-form-field>
+  </div>
+  <div class="fix">
     <div class="toggle-container">
-      <div class="toggle">
-          <div class="toggle-panel toggle-left">
-              <h1>Welcome Back!</h1>
-              <p>Enter your personal details to use all of site features</p>
-              
-          </div>
-          <div class="toggle-panel toggle-right">
-              <h1>Hello, Friend!</h1>
-              <p>Register with your personal details to use all of site features</p>
-          </div>
-      </div>
+    <div class="toggle">
+        <div class="toggle-panel toggle-left">
+            <h1>Welcome Back!</h1>
+            <p>Enter your personal details to use all of site features</p>
+            
+        </div>
+        <div class="toggle-panel toggle-right">
+            <h1>Hello, Friend!</h1>
+            <p>Register with your personal details to use all of site features</p>
+        </div>
     </div>
+  </div>
+</div>
+  
