--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,33 +1,34 @@
-<div class="parent">
-  <mat-form-field class="Sign-In" title="Create Account">
-    <form  class="form">
-      <mat-form-field class="form-field">
-        <mat-label>Display Name</mat-label>
-        <input type="text" matInput formControlName="displayName" placeholder="Display Name">
-        <mat-error *ngIf="form.controls['displayName'].hasError('minlength')">Name is too short</mat-error>
-      </mat-form-field>
-      <mat-form-field class="form-field">
-        <mat-label>Email</mat-label>
-        <input type="email" matInput formControlName="email" placeholder="email">
-        <mat-error *ngIf="form.controls['email'].hasError('email')">Enter a valid email</mat-error>
-      </mat-form-field>
-      <mat-form-field class="form-field">
-        <mat-label>Password</mat-label>
-        <input type="password" matInput formControlName="password" required placeholder="Password">
-        <mat-error *ngIf="form.controls['password'].hasError('minlength')">Password is too short</mat-error>
-      </mat-form-field>
-  
-      <button class="but" mat-raised-button color="accent" >Create Account</button>
-      
-    </form>
-  </mat-form-field>
-  </div>
-  <div class="toggle-container">
-    <div class="toggle">
+
+  <div class="parent">
+    <mat-form-field class="Sign-In" title="Create Account">
+      <form [formGroup]="form" class="form">
+        <mat-form-field class="form-field">
+          <mat-label>Display Name</mat-label>
+          <input type="text" matInput formControlName="displayName" placeholder="Display Name">
+          
+        </mat-form-field>
+        <mat-form-field class="form-field">
+          <mat-label>Email</mat-label>
+          <input type="email" matInput formControlName="email" placeholder="email">
         
-        <div class="toggle-panel toggle-right">
-            <h1> Welcome Back! </h1>
-            <p>Enter your personal details to use all of site features</p>
-        </div>
+        </mat-form-field>
+        <mat-form-field class="form-field">
+          <mat-label>Password</mat-label>
+          <input type="password" matInput formControlName="password" required placeholder="Password">
+         
+        </mat-form-field>
+    
+        <button class="but" mat-raised-button color="accent" >Create Account</button>
+        
+      </form>
+    </mat-form-field>
     </div>
-  </div>
+    <div class="toggle-container">
+      <div class="toggle">
+          
+          <div class="toggle-panel toggle-right">
+              <h1> Welcome Back! </h1>
+              <p>Enter your personal details to use all of site features</p>
+          </div>
+      </div>
+    </div>
